# Vesper

./: CMakeLists.txt  LICENSE  README.MD
source/audio/: AudioEngine.cpp  AudioEngine.h  AudioManager.cpp  AudioManager.h
source/core/: main.cpp
source/files/: files.cpp  files.h
source/fonts/: loadFonts.cpp  loadFonts.h
source/gui/: GuiLoop.cpp  GuiLoop.h  gui.cpp  gui.h
source/lyrics/: getlyrics.cpp  getlyrics.h
source/tags/: albumArt.cpp  albumArt.h  readtags.cpp  readtags.h
